# TMS-Backend

./: main.py  pyproject.toml  requirements.txt  test.py
config/: __init__.py  settings.py
research/: 1_database_tasting.ipynb  1_test_config.ipynb  2_update_matrix.ipynb  3_or_datamodel.ipynb  4_mysql.ipynb
scripts/: update_matrix.py
src/api/: schemas.py
src/api/database/: database.py  models.py
src/api/database/repository/: gps_master.py
src/api/routes/: depot_routes.py  fleet_route.py  fleet_routes.py  geo_constraint_routes.py  job_routes.py  master_routes.py  optim_routes.py  optimization_routes.py  order_group_routes.py  order_routes.py  predefined_route_routes.py  shop_routes.py  vehicle_constrain_routes.py  vehicle_route.py  vehicle_routes.py
src/core/: map_manager.py  master.py  matrix_manager.py  optimize_routes.py  solver_manager.py
src/core/solver/: controller.py  data_model.py  ortool_solver.py
src/database/: database.py  models.py
src/database/repository/: fleet_curd.py  fleet_operation.py  geo_constraint_crud.py  gps_curd.py  gps_master.py  job_curd.py  order_crud.py  order_group_crud.py  predefined_route_crud.py  shops_curd.py  vehicle_curd.py  vehicle_operation.py
src/database/services/: depot_curd.py  fleet_curd.py  geo_constraint_crud.py  order_crud.py  order_group_crud.py  predefined_route_crud.py  shops_curd.py  vehicle_constraint_curd.py  vehicle_crud.py
src/exception/: __init__.py
src/routes/: optimization_routes.py
src/utils/: map_utils.py  master_utils.py
